src/components/modal/dashModals/topTenModal/TopTen.css
.topTenListContainer {
    width: 42%;
    height: 100%;
    padding: 15px;
    text-align: left;
    background-color: white;
    border-radius: 10px;
    border: 1px solid #bdbdbd;
    box-shadow: 0px 0px 4px rgb(110,110,110);
    margin: 5vh auto;
}

.clubLogo {
    width: 25px;
    height: 25px;
}

.topTenHeader {
  color: black;
  text-align: center;
  width: 100%;
  margin: 0px auto;
  display: flex;
  flex-wrap: wrap;
}

.topTenListRow {
  margin: 0px auto;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding: 5px;
  border-bottom: 1px solid rgba(50,50,50,0.5);
}

.topTenListName {
  padding: 0px 5px;
  width: 80%;
}

.topTenTitleNameContainer {
  width: 50%;
  text-align: center;
}

.topTenTitleNameContainer > h3 {
  padding-bottom: 5px;
  border-bottom: 2px solid rgba(50,50,50,0.5);
  margin: 0px auto;
  width: 80%;
}

.topTenListStatContainer {
  width: 49%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  padding-right: 3px;
}

.topTenStatBox {
  width: 33%;
  text-align: center;
}

.topTenStatBox > h5 {
  border-left: 1px dotted rgba(50,50,50,0.5);
}

.topTenStatTitleBox {
  width: 30%;
  text-align: center;
  margin: 0px auto;
}

.h3Underline {
  width: 77%;
  margin: 0px auto;
}

.h3Underline > h3 {
  border-bottom: 2px solid rgba(50,50,50,0.5);
  padding-bottom: 5px;
}

.halfBox {
  width: 50%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.topTenLIContainer {
  cursor: pointer;
}

.playerDisplayImgContainer {
    width: 37.5%;
}

.playerDisplayImgContainer > img {
  width: 100%;
}

.playerDisplayStatContainer {
    width: 60%;
    margin: 0px auto;
}

.fullRow {
    width: 100%;
    margin: 5px 0px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.playerDisplayContainer {
    width: 45%;
    height: 100%;
    padding: 5px;
    /* text-align: left; */
    background-color: white;
    border-radius: 10px;
    border: 1px solid #bdbdbd;
    box-shadow: 0px 0px 4px rgb(110,110,110);
    margin: 5vh auto;
    display: flex;
    flex-wrap: wrap;
    text-align: left;
  }

.positionDisplayBox {
  margin: 0px auto;
}

.clubDisplayBox {
  text-align: left;
  padding: 5px 0px;
}

.clubDisplayBox > h4 {
  color: rgb(58, 58, 58);
}

.positionDisplayBox > button {
  margin: 0px;
  border: 2px solid #FFFFFF;
  border-radius: 25px;
  color: white;
  cursor: default;
  padding: 5px 10px;
  font-size: 1em;
  font-weight: 90;
}

.GKP {
  background: #FFFFFF;
  background: -webkit-linear-gradient(right,#ffd200 20%,  #ECFF00, #acff00 80%);
  background: -moz-linear-gradient(right, #ffd200 20%,  #ECFF00, #acff00 80%);
  background: linear-gradient(to right, #b89c00 5%,  #eede02, #ECFF00 95%);
  color: black;

}

.FWD {
  background: #FFFFFF;
  background: -webkit-linear-gradient(right, #cc2c64 5%, #ff377d, #ff73a4 95%);
  background: -moz-linear-gradient(right, #cc2c64 5%, #ff377d, #ff73a4 95%);
  background: linear-gradient(to right, #8a1e44 5%, #ff377d, #ff95ba 95%);

}

.MID {
  background: #FFFFFF;
  background: -webkit-linear-gradient(right, #06b2ff 20%, #06F0FF, #06ffd0 80%);
  background: -moz-linear-gradient(right, #06b2ff 20%, #06F0FF, #06ffd0 80%);
  background: linear-gradient(to right, rgba(13,71,161 ,1) 5%, rgba(33,150,243 ,1), #6af6ff 95%);

}

.DEF {
  background: #FFFFFF;
  background: -webkit-linear-gradient(right, #FFFFFF, #00FF88);
  background: -moz-linear-gradient(right, #FFFFFF, #00FF88);
  background: linear-gradient(to right, #004c29 5%, #00b35f, #00FF88 95%);
}

.displayStatTable {
  width: 100%;
  height: 100%;
}

.changeTableButtonContainer {
  padding: 0px 5px;
  display: flex;
  flex-wrap: wrap;
}

.changeTableButton {
  cursor: pointer;
}

.tableHeaderRow {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

.tableTab {
  width: 20%;
  cursor: pointer;
}

.tableTab > h4 {
  font-size: .85em;
  text-align: center;
}

.tableContainer {
  width: 90%;
  margin: 5px auto;
  display: flex;
  flex-wrap: wrap;
}

.tableStatBox {
  width: 50%;
  text-align: center;
  display: flex;
  flex-wrap: wrap;
  font-size: .90em;
  align-items: center;
  border-bottom: 1px solid rgba(50,50,50,0.5);
  padding: 3px 0px;
}

.tableStatNumBox > h5 {
  border-left: 1px dotted rgba(50,50,50,0.5);
  border-right: 1px dotted rgba(50,50,50,0.5);
}

.tableStatTitleBox {
  width: 67%;

}

.tableStatNumBox {
  width: 33%;

}

